Infrastrure/public-ip.tf
resource "azurerm_public_ip" "vm_pip" {

  name                = "app-public-ip"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  allocation_method = "Static"

  sku = "Standard"
}
